# hw04-group25

./: .buildinfo  LOSC_Event_tutorial.html  Makefile  README.html  README.md  _config.yml  _toc.yml  conf.py  contribution_statement.html  contribution_statement.md  genindex.html  hw04_description.html  objects.inv  search.html  searchindex.js  setup.cfg
.github/workflows/: book.yml
_build/.doctrees/: LOSC_Event_tutorial.doctree  contribution_statement.doctree  environment.pickle  hw04_description.doctree
_build/html/: .buildinfo  LOSC_Event_tutorial.html  README.html  contribution_statement.html  genindex.html  hw04_description.html  index.html  objects.inv  search.html  searchindex.js
_build/html/.doctrees/: README.doctree  contribution_statement.doctree  environment.pickle  hw04_description.doctree
_build/html/_sources/: contribution_statement.md
_sources/: README.md  contribution_statement.md
ligotools/: README.html  __init__.py  setup.cfg  utils.py
ligotools/ligotools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ligotools/ligotools/tests/: test_utils.py  test_utils2.py
ligotools/tests/: tests_readligo.py  tests_utils.py
